<resources>
    <string name="app_name">FlightReservationApp</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_search_flights">Search Flights</string>
    <string name="menu_view_previous_reservations">View Previous Reservations</string>
    <string name="menu_view_current_reservations">View Current Reservations</string>
    <string name="menu_create_flight">Create Flight</string>
    <string name="menu_view_all_reservations">View Reservations</string>
    <string name="menu_filter_flight">Flight Filter</string>
    <string name="menu_view_flight_not_available">View Flight Not Available</string>
    <string name="menu_view_flight_available">View Flight Available</string>
    <string name="menu_view_flight_archive">View Flight Archive</string>
    <string name="menu_edit_or_remove_flight">Edit Or Remove Flight</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="recurrent_options">
        <item>NONE</item>
        <item>DAILY</item>
        <item>WEEKLY</item>
    </string-array>


    <string-array name="sorting_options">
        <item>Lowest Cost</item>
        <item>Shortest Duration</item>
    </string-array>

    <string-array name="flight_class_options">
        <item>Economy</item>
        <item>Business</item>
    </string-array>


    <string-array name="city_list">
        <item>Atlanta</item>
        <item>Auckland</item>
        <item>Cairo</item>
        <item>Chicago</item>
        <item>Dubai</item>
        <item>Frankfurt</item>
        <item>London</item>
        <item>Los Angeles</item>
        <item>Miami</item>
        <item>Mumbai</item>
        <item>New Delhi</item>
        <item>New York</item>
        <item>Osaka</item>
        <item>Paris</item>
        <item>San Francisco</item>
        <item>Sapporo</item>
        <item>Sydney</item>
        <item>Tokyo</item>
    </string-array>


</resources>