<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_create_flight"
            android:icon="@drawable/ic_create"
            android:title="@string/menu_create_flight" />

        <item
            android:id="@+id/nav_edit_or_remove_flight"
            android:icon="@drawable/ic_edit_remove"
            android:title="@string/menu_edit_or_remove_flight" />


        <item
            android:id="@+id/nav_view_flights_available"
            android:icon="@drawable/ic_view"
            android:title="@string/menu_view_flight_available" />

        <item
            android:id="@+id/nav_view_flights_not_available"
            android:icon="@drawable/ic_view_not_available"
            android:title="@string/menu_view_flight_not_available" />

        <item
            android:id="@+id/nav_view_flights_archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/menu_view_flight_archive" />


        <item
            android:id="@+id/nav_view_all_reservations"
            android:icon="@drawable/ic_ticket"
            android:title="@string/menu_view_all_reservations" />

        <item
            android:id="@+id/nav_filter_flight"
            android:icon="@drawable/ic_filter"
            android:title="@string/menu_filter_flight" />

        <item
            android:id="@+id/nav_logout"
            android:title="Logout"
            android:icon="@drawable/ic_logout" />

    </group>
</menu>