<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.flightreservationapp.activity.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create_flight"
        android:name="com.example.flightreservationapp.activity.ui.CreateFlightFragment"
        android:label="@string/menu_create_flight"
        tools:layout="@layout/fragment_create_flight" />

    <fragment
        android:id="@+id/nav_edit_or_remove_flight"
        android:name="com.example.flightreservationapp.activity.ui.EditOrRemoveFlightFragment"
        android:label="@string/menu_edit_or_remove_flight"
        tools:layout="@layout/fragment_edit_or_remove_flight" />

</navigation>