<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_passenger_navigation"
    app:startDestination="@+id/nav_passenger_home">

    <fragment
        android:id="@+id/nav_passenger_home"
        android:name="com.example.flightreservationapp.activity.passenger_fragment.PassengerHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_passenger_home" />


    <fragment
        android:id="@+id/nav_search_flights"
        android:name="com.example.flightreservationapp.activity.passenger_fragment.SearchFlightsFragment"
        android:label="@string/menu_search_flights"
        tools:layout="@layout/fragment_search_flights" />


    <fragment
        android:id="@+id/nav_view_previous_reservations"
        android:name="com.example.flightreservationapp.activity.passenger_fragment.ViewPreviousReservationsFragment"
        android:label="@string/menu_view_previous_reservations"
        tools:layout="@layout/fragment_view_previous_reservations" />


</navigation>